230719 remove requirements.txt 
230719 add argparser 
230719 add load graph 
230716 exploration test ok 
230630 major patch 
230215 add projected atari env
230213 reomve edge reliability
230213 conditioned e-greedy
230129 rename of components
230129 remove atari alternative
230123 hop off detection
230123 projector hash error fixed
230123 add tensorboard writer
230111 removing redundent env code
221220 CHECKPOINT
221215 add random ops
221215 different train eval steps
221208 value iteration gamma fixed
221124 atari unreliability fixed
221123 optimize atari
221108 add tri-hashing
221025 sokoban fixed
221016 add reliability score
221011 duplicated obs fixed
221011 stochastic env support
220901 code refactoring 2
220901 code refactoring 1
220830 debug sokoban
220822 add sokoban
220822 add new environments
220805 add render video
220805 finish bug fixed
220804 RNN add step; add MR (Max Reward report)
220804 add n-steps RNN
220728 add atari env play test
220721 fix graph building: new edge in the same node; current traj. crossing step correction; remove dynamic e-greedy
220720 add graph-shape statistic
220719 add auto batch division for vp on very large graphs
220719 graph sanity check and cmd block fixed
220719 bug fix, and auto debugging
220618 merge three atari env 
220613 bug fix
220419 add maze env
220413 file log output bug fixed
220413 worker cannot return issue solved
220408 worker cannot return issue
220408 last controllable step not in the graph
220408 testing whole env obj hashing
220408 output improved, termination fixed
220406 exception handler fix
220406 config printer fix
220401 add historical hashing env
220322 bug fix: action override during graph construction
220316 add graph visualization component
220221 add traj. intersection detection
220221 sync by pipe
211206 auto propagation: (SOLVED) issue: fake stochastics and self loop: add trustness / confidence of transition 
211206 improve dag build for cycle detection
211205 bug fixed
211205 add cuda mps